--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <body>
         <h1>Sudoku Game</h1>
         <div id="game-container">
+            <div id="info-container">
+                <div id="timer"></div>
+            </div>
             <table id="sudoku-grid"></table>
             <div id="button-container">
                 <div id="number-buttons"></div>
