--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <div id="game-container">
             <div id="info-container">
-                <div id="timer">00:00</div>
+                <div id="timer"></div>
             </div>
             <table id="sudoku-grid" aria-label="Sudoku Puzzle Grid"></table>
             <div id="button-container">
